--- a/Fragments/main/res/layout/fragment_story.xml
+++ b/Fragments/main/res/layout/fragment_story.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is Chats Fragment"
+        android:text="This is Story Fragment"
         android:textSize="30sp"
         android:textColor="@color/black"
         android:textStyle="bold"
